--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "br.com.imcom.bikerama"
@@ -10,6 +11,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        // Enabling multidex support.
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -25,6 +28,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile "cz.msebera.android:httpclient:4.4.1.1"
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'cz.msebera.android:httpclient:4.4.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile 'com.google.code.gson:gson:2.4'
 }
