--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.imcom.bikerama" >
+    package="br.com.imcom.bikerama">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <permission
+        android:name="br.com.imcom.bikerama.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="br.com.imcom.bikerama.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- localização do usuário -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:name=".AppController"
@@ -14,10 +29,9 @@
         android:icon="@drawable/android_icon_72x72"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
-        </activity>
-        <activity android:name=".SplashActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,24 +41,31 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme" >
-        </activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
-            android:theme="@style/FullscreenTheme" >
-        </activity>
-        <activity android:name=".Register3Activity" >
-        </activity>
-        <activity android:name=".RegisterBikeActivity" >
-        </activity>
-        <activity android:name=".InicialActivity" >
-        </activity>
-        <activity android:name=".RegistroPercursoActivity" >
-        </activity>
-        <activity android:name=".RegisterComponentesActivity" >
-        </activity>
+            android:theme="@style/FullscreenTheme" />
+        <activity android:name=".Register3Activity" />
+        <activity android:name=".RegisterBikeActivity" />
+        <activity android:name=".InicialActivity" />
+        <activity android:name=".RegistroPercursoActivity" />
+        <activity android:name=".RegisterComponentesActivity" />
+        <!-- Requerido pelo Google Maps -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDU8O38Byg6qrDSpuLzOJpYAanMdHwmMSo" />
+        <!-- Requerido pelo Google Play Services -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".LocationActivity" />
+        <activity android:name=".SavePercursoActivity" />
+        <activity android:name=".PercursosActivity" />
+        <activity android:name=".HistoricoPercursosActivity" />
+        <activity android:name=".DetalhesPercursoActivity" />
     </application>
 
 </manifest>
