Percurso e Dados Percurso salvo v 1.0.10

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".PercursosActivity" />
         <activity android:name=".HistoricoPercursosActivity" />
         <activity android:name=".DetalhesPercursoActivity" />
+        <activity android:name=".ViewComponentesActivity"></activity>
     </application>
 
 </manifest>
